@@ -128,11 +128,23 @@ class WC_Stripe_Intent_Controller {
 			if ( isset( $_GET['save_payment_method'] ) && ! empty( $_GET['save_payment_method'] ) ) {
 				$intent = $gateway->get_intent_from_order( $order );
 				if ( isset( $intent->last_payment_error ) ) {
+					$last_payment_error = $intent->last_payment_error;
+					$source_id          = '';
+
+					// Backwards compatibility for payment intents that use sources.
+					if ( isset( $last_payment_error->payment_method->id ) ) {
+						$source_id = $last_payment_error->payment_method->id;
+					} elseif ( isset( $last_payment_error->source->id ) ) {
+						$source_id = $last_payment_error->source->id;
+					}
+
 					// Currently, Stripe saves the payment method even if the authentication fails for 3DS cards.
 					// Although, the card is not stored in DB we need to remove the source from the customer on Stripe
 					// in order to keep the sources in sync with the data in DB.
-					$customer = new WC_Stripe_Customer( wp_get_current_user()->ID );
-					$customer->delete_source( $intent->last_payment_error->source->id );
+					if ( ! empty( $source_id ) ) {
+						$customer = new WC_Stripe_Customer( wp_get_current_user()->ID );
+						$customer->delete_source( $source_id );
+					}
 				} else {
 					$metadata = $intent->metadata;
 					if ( isset( $metadata->save_payment_method ) && 'true' === $metadata->save_payment_method ) {
